--- a/style/groceries-page.css
+++ b/style/groceries-page.css
@@ -131,7 +131,7 @@
 
 .groceries .container .phone-screen img {
     padding-top: 5vh;
-    padding-left: 9vh;
+    padding-left: 15vh;
     height: 65vh;
 }
 
@@ -142,6 +142,8 @@
     font-size: 25px;
     font-weight: bold;
 }
+
+/*random fruit and dots on the groceries page*/
 
 .groceries .bottom-strawberry img {
     margin-top: 35vh;
@@ -166,7 +168,7 @@
 .groceries .bottom-pear {
     z-index: 1;
     position: absolute;
-    margin-top: 51vh;
+    margin-top: 49vh;
     margin-left: 95vh;
 }
 
