--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -2,6 +2,17 @@
 
 @import 'dist/pretty-checkbox.min.css';
 
+html,
+body {
+    margin: 0;
+    height: 100%;
+}
+
+body {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(173deg, rgba(255, 255, 255, 1) 0%, rgba(10, 78, 189, 0.8729692560617998) 100%, rgba(0, 212, 255, 1) 100%);
+}
+
 #task-container {
     display: flex;
     flex-wrap: wrap;
@@ -16,8 +27,6 @@
     width: 100%;
 }
 
-
-
 .title {
     margin: 1vh;
 }
@@ -27,6 +36,8 @@
 }
 
 .card {
+    border: 0;
+    opacity: 0.85;
     width: 12rem;
     margin: 1vh;
     display: flex;
